# msg-to-pdf-dropzone

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: windows-ci.yml
deploy/windows/: README.md  WEB-SVR03-CHECKLIST.md  deploy-live-web-svr03.ps1  msg-to-pdf-dropzone.env.example  register-msg-to-pdf-dropzone-task.ps1  run-msg-to-pdf-dropzone.ps1  web-svr03.app.env
docs/: web-dropzone-contract.md
emails-for-testing/1/: _GitHub_ Payment Receipt for derek-betz.msg
emails-for-testing/10/: RE_ INDOT US 33_ DES 2000030 - outfall mapping.msg
emails-for-testing/11/: RE_ OpenAI API Key Costs.msg
emails-for-testing/12/: RE_ SR 127 P 25.msg
emails-for-testing/13/: Sandboxing.msg
emails-for-testing/14/: State of Indiana - Account DBetz@indot_in_gov is Expiring.msg
emails-for-testing/15/: FW_ R-43991 - Des 2101166 Stage 3 -  SR 127 HMA Overlay.msg
emails-for-testing/16/: RE_ Des No 2101166 and 2400535_ SR 127 HMA Overlay_ Sidewalk_ and Waterline_ in Angola_ Indiana.msg
emails-for-testing/17/: RE_ Lead Des_ No_ 2101166 - CE Submittal Post-PI.msg
emails-for-testing/18/: RE_ Status Report- R-43991 -Des No 2101166 and 2400535_ SR 127 HMA Overlay_ Sidewalk_ and Waterline_ in Angola_ Indiana.msg
emails-for-testing/19/: Final Field Check - R-43991 -Des No 2101166 and 2400535_ SR 127 HMA Overlay_ Sidewalk_ and Waterline_ in Angola_ Indiana.msg
emails-for-testing/20/: Re_ SR 127 HMA Overlay (DES 2101166)-Pavement Design Report.msg
emails-for-testing/3/: 25H0003B_03 SR 14 Typical Sections.msg
emails-for-testing/4/: Create Position - Successfully Completed.msg
scripts/: start-rendered-ui-workflow.ps1  validate-browser-release.ps1
tests/: test_app_drop_responsiveness.py  test_app_state.py  test_browser_validation.py  test_converter.py  test_corpus_validator.py  test_drop_helpers.py  test_feedback_api.py  test_hosted_settings.py  test_msg_parser.py  test_outlook_mhtml_worker.py  test_pdf_writer.py  test_server_startup.py  test_task_events.py  test_thread_logic.py  test_web_server.py  test_web_ui_dropzone_controller.py
theater_runtime/src/: types.ts  (+2 more)
(+36 files in other folders)
