[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msg-to-pdf-dropzone"
version = "0.1.0"
description = "Windows-local browser app for converting Outlook .msg emails to PDF files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "extract-msg>=0.45.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pypdf>=5.0.0,<6.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "reportlab>=4.2.0,<5.0.0",
  "tkinterdnd2>=0.4.2,<1.0.0",
  "uvicorn>=0.34.0,<1.0.0",
  "pywin32>=306; platform_system == 'Windows'",
  "pywebview>=5.1,<6.0; platform_system == 'Windows'",
]

[project.scripts]
msg-to-pdf-dropzone = "msg_to_pdf_dropzone.web_server:main"
msg-to-pdf-browser = "msg_to_pdf_dropzone.web_server:main"
msg-to-pdf-browser-validate = "msg_to_pdf_dropzone.browser_validation:main"
msg-to-pdf-desktop = "msg_to_pdf_dropzone.app:main"
msg-to-pdf-corpus-profile = "msg_to_pdf_dropzone.corpus_profiler:main"
msg-to-pdf-corpus-validate = "msg_to_pdf_dropzone.corpus_validator:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
msg_to_pdf_dropzone = [
  "assets/mailroom/*.json",
  "assets/mailroom/*.png",
  "theater_assets/*",
  "theater_assets/assets/*",
  "web_ui/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
